[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Rat/rat_walk1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Rat/rat_walk2.png" type="Texture" id=2]
[ext_resource path="res://src/Actors/Rat.gd" type="Script" id=3]
[ext_resource path="res://Music/Rat/rat_sound1.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 4 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 11, 2 )

[node name="Rat" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 3 )
speed = Vector2( 40, 500 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -3 )
frames = SubResource( 1 )
frame = 1
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="Whip" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Whip"]
shape = SubResource( 3 )

[node name="Head" type="Area2D" parent="."]
modulate = Color( 0.0745098, 0.184314, 0.682353, 1 )
position = Vector2( 0, -5 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource( 4 )

[node name="Wall" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 13, 0 )
collision_mask = 8

[node name="Player" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 40, 0 )

[node name="Ground" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource( 5 )

[node name="Activation" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0

[connection signal="area_entered" from="Whip" to="." method="_on_Whip_area_entered"]
[connection signal="body_entered" from="Head" to="." method="_on_Head_body_entered"]
[connection signal="body_entered" from="Ground" to="." method="_on_Ground_body_entered"]
